<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DAKTEL</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello&amp;world!</string>
    <string name="ring_vibration_name">Ring&amp;Vibration</string>
    
    
 <string name="_Control_Plane"> Control Plane</string>
<string name="_GPS"> GPS</string>
<string name="_GPS_auto_report_timemin"> GPS auto report time(min)</string>
<string name="_Mute"> Mute</string>
<string name="_Ring_Only"> Ring Only</string>
<string name="_Ring_Scene_Setup"> Ring Scene Setup</string>
<string name="_Ring_Type_Setup">Ring Type Setup</string>
<string name="_Ring_Vibration"> Ring&amp;Vibration</string>
<string name="_Sensitivity_step"> Sensitivity step</string>
<string name="_Time_Rangedays"> Time Range(days)</string>
<string name="_Vibration"> Vibration</string>
<string name="_Volume_Setup"> Volume Setup</string>
<string name="_high"> high</string>
<string name="_low"> low</string>
<string name="_normal"> normal</string>
<string name="s_Conecto">\'s Conecto</string>
<string name="AGPS">AGPS</string>
<string name="AGPS_is">AGPS is</string>
<string name="AGPS_setup">AGPS setup</string>
<string name="About">About</string>
<string name="Add">Add</string>
<string name="Add_Device">Add Device</string>
<string name="Added_to_the_Emergency_Call_SOS_numbers">Added to the Emergency Call SOS numbers</string>
<string name="Added_to_the_M1_Number">Added to the M1 Number</string>
<string name="Added_to_the_M2_Number">Added to the M2 Number</string>
<string name="Alert_Notification">Alert Notification</string>
<string name="Alerts_Notification">Alerts Notification</string>
<string name="Are_you_sure_add">Are you sure add</string>
<string name="Are_you_sure_change_to">Are you sure change to</string>
<string name="Are_you_sure_to_delete">Are you sure to delete</string>
<string name="Auto_Answer">Auto Answer</string>
<string name="AutoAnswer">Auto-Answer</string>
<string name="Call_Now">Call Now</string>
<string name="Cancel">Cancel</string>
<string name="Change">Change</string>
<string name="Change_Device">Change Device</string>
<string name="Check_your_email_and_follow_the_instructions_to_reset_your_password.">Check your email and follow the instructions to reset your password.</string>
<string name="Contact_Us">Contact Us</string>
<string name="Delete_Device">Delete Device</string>
<string name="Demos_Conecto">Demo\'s Conecto</string>
<string name="Disable">Disable</string>
<string name="Disabled">Disabled</string>
<string name="Dont_have_account_">Don\'t have account? </string>
<string name="ont_have_account_REGISTER">on\'t have account? REGISTER</string>
<string name="Dutch">Dutch</string>
<string name="Email">Email</string>
<string name="Enable">Enable</string>
<string name="Enabled">Enabled</string>
<string name="English">English</string>
<string name="FORGOT_PASSWORD">FORGOT PASSWORD</string>
<string name="Fall_Detect">Fall Detect</string>
<string name="Fall_Detect_Alert_Number">Fall Detect Alert Number</string>
<string name="Fall_Detect_Number">Fall Detect Number</string>
<string name="Fall_detect">Fall detect</string>
<string name="Find__Location">Find  Location</string>
<string name="Forgot_Password">Forgot Password?</string>
<string name="French">French</string>
<string name="GET_About_GPS">GET About GPS</string>
<string name="GET_About_RING">GET About RING</string>
<string name="GET_SOS_Message">GET SOS Message</string>
<string name="GPS">GPS</string>
<string name="GPS_Auto_Report">GPS Auto Report</string>
<string name="GPS_Setting">GPS Setting</string>
<string name="GPS_auto_report">GPS auto report</string>
<string name="GPS_auto_report_is">GPS auto report is</string>
<string name="German">German</string>
<string name="Geofence">Geofence</string>
<string name="Geofence_Alert_Number">Geofence Alert Number</string>
<string name="Geofence_Alert_Phone_Number">Geofence Alert Phone Number</string>
<string name="Geofence_Range">Geofence Range</string>
<string name="Geofence_Setup">Geofence Setup</string>
<string name="Geofence_is">Geofence is</string>
<string name="Get">Get</string>
<string name="Get_AutoAnswer">Get Auto-Answer</string>
<string name="Get_Detect">Get Detect</string>
<string name="Get_Language">Get Language</string>
<string name="Get_Low_Battery_Warning">Get Low Battery Warning</string>
<string name="Get_M1_M2_number">Get M1&amp;M2 number</string>
<string name="Get_Number_For_Verification">Get Number For Verification</string>
<string name="Help">Help</string>
<string name="In_Meters">In Meters</string>
<string name="Insert_phone_number">Insert phone number</string>
<string name="LOGIN">LOGIN</string>
<string name="Language">Language</string>
<string name="Language_has_been_replaced_to">Language has been replaced to</string>
<string name="Last_Update">Last Update</string>
<string name="Low_Battery">Low Battery</string>
<string name="Low_Battery_Alert_Phone_Number">Low Battery Alert Phone Number</string>
<string name="Low_Battery_Warning">Low Battery Warning</string>
<string name="Low_Battery_number">Low Battery number</string>
<string name="Low_battery_number">Low battery number</string>
<string name="M1_NUMBER">M1 NUMBER</string>
<string name="M1_Number">M1 Number</string>
<string name="M1M2">M1/M2</string>
<string name="M1M2_Number">M1/M2 Number</string>
<string name="M1M2_number">M1/M2 number</string>
<string name="M2_NUMBER">M2 NUMBER</string>
<string name="M2_Number">M2 Number</string>
<string name="Message_1">Message 1</string>
<string name="Message_2">Message 2</string>
<string name="Message_3">Message 3</string>
<string name="Message_4">Message 4</string>
<string name="Message_5">Message 5</string>
<string name="Mute">Mute</string>
<string name="Name">Name</string>
<string name="New_Alert_Phone_Number">New Alert Phone Number</string>
<string name="New_Number_For_Verification">New Number For Verification</string>
<string name="Password">Password</string>
<string name="Periodic_Device_Check">Periodic Device Check</string>
<string name="Periodic_device_check">Periodic device check</string>
<string name="Phone_Number_For_Verification">Phone Number For Verification</string>
<string name="Please_choose_a_device_first">Please choose a device first</string>
<string name="Please_choose_new_device">Please choose new device</string>
<string name="Portuguese">Portuguese</string>
<string name="Privacy___Terms">Privacy &amp; Terms</string>
<string name="REGISTER">REGISTER</string>
<string name="REGISTRATION">REGISTRATION</string>
<string name="REPORT_TIME">REPORT TIME</string>
<string name="RESET_PASSWORD">RESET PASSWORD</string>
<string name="Remember_Me">Remember Me</string>
<string name="Ring___Tone">Ring &amp; Tone</string>
<string name="Ring_Only">Ring Only</string>
<string name="Ring_Scene">Ring Scene</string>
<string name="Ring_Vibration">Ring&amp;Vibration</string>
<string name="SET_About_GPS">SET About GPS</string>
<string name="SET_About_RING">SET About RING</string>
<string name="SET_SOS_Message">SET SOS Message</string>
<string name="SOS_Message">SOS Message</string>
<string name="SOS_Message_help_info_coming_soon">SOS Message help info coming soon</string>
<string name="SOS_Number">SOS Number</string>
<string name="SOS_Number_help_info_coming_soon_SOS_Number_help_info_coming_soon_SOS_Number_help_info_coming_soon">SOS Number help info coming soon SOS Number help info coming soon SOS Number help info coming soon</string>
<string name="Search">Search</string>
<string name="Sensitivity_step">Sensitivity step</string>
<string name="Set">Set</string>
<string name="Set_4digit_Access_Code">Set 4-digit Access Code</string>
<string name="Set_AutoAnswer">Set Auto-Answer</string>
<string name="Set_Detect">Set Detect</string>
<string name="Set_Language">Set Language</string>
<string name="Set_Low_Battery_Warning">Set Low Battery Warning</string>
<string name="Set_Number_For_Verification">Set Number For Verification</string>
<string name="Set_language_for_the_voice_prompt_announcement">Set language for the voice prompt announcement</string>
<string name="Set_new_password">Set new password</string>
<string name="Setings">Setings</string>
<string name="Setup__SOS_number">Setup  SOS number</string>
<string name="Setup_Energency_Call_SOS_Number">Setup Energency Call SOS Number</string>
<string name="Setup_M1_number">Setup M1 number</string>
<string name="Setup_M1_M2_number">Setup M1&amp;M2 number</string>
<string name="Setup_M2_number">Setup M2 number</string>
<string name="Setup_SOS_Message">Setup SOS Message</string>
<string name="Spanish">Spanish</string>
<string name="Sure">Sure</string>
<string name="Switch_Device">Switch Device</string>
<string name="Time_Range">Time Range</string>
<string name="Time_range_changed_to">Time range changed to</string>
<string name="Tone___Profile">Tone &amp; Profile</string>
<string name="Tone_Profile">Tone&amp;Profile</string>
<string name="Turkish">Turkish</string>
<string name="Type">Type</string>
<string name="Unset">Unset</string>
<string name="Update_History">Update History</string>
<string name="UserName">UserName</string>
<string name="Vibration">Vibration</string>
<string name="Volume">Volume</string>
<string name="XXXX">XXXX</string>
<string name="days">days</string>
<string name="help_info_coming_soon">help info coming soon</string>
<string name="meters">meters</string>
    
<string name="PHONE1">PHONE1</string>
<string name="PHONE2">PHONE2</string>
<string name="PHONE3">PHONE3</string>
<string name="PHONE4">PHONE4</string>
<string name="PHONE5">PHONE5</string>
<string name="PHONE6">PHONE6</string>
<string name="PHONE7">PHONE7</string>
<string name="PHONE8">PHONE8</string>
<string name="GPS_Setup">GPS Setup</string>

<string name="Set_password_OK">Set password OK.</string>
<string name="entry_add_device">entry add device</string>
<string name="Alerts_Notification_Enable">Alerts Notification Enable.</string>
<string name="Alerts_Notification_Disable">Alerts Notification Disable.</string>
<string name="Success">success</string>
<string name="Please_Add_one_device_first">Please Add one device first.</string>
<string name="Hours">Hours</string>
<string name="Confirm_Exit">Confirm Exit</string>
<string name="YES">YES</string>
<string name="NO">NO</string>
<string name="Please_input_user_name_or_password">Please input user name or password</string>
<string name="Please_input_M2_number">Please_input_M2_number</string>
<string name="Please_input_phone_number">Please input phone number</string>
<string name="Please_input_message">Please input message</string>
    <string name="Please_set_destination_number_first">Please set destination number first</string>

</resources>
