
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
 <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="fill_parent"    
    android:background="@drawable/thomson"
    android:layout_height="40dp">    
    
        <Button
            android:id="@+id/btnBack"
            android:layout_width="27dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_back" />

       

    
    
</LinearLayout>
<ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout
    android:id="@+id/sos_number"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF" >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#F5F5F5" >
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#FFFFFF" >

    

<LinearLayout   
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content" 
	android:orientation="horizontal"
	android:layout_marginTop="5dp"
	android:layout_marginRight="10dp"
	android:layout_marginLeft="10dp"
	android:background="@drawable/layoutform" > 	

    <ImageView
    android:id="@+id/submenu_pic"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="#00000000"
    android:layout_weight="1"
    android:src="@drawable/app_set_sos_number" />

    <TextView 
    android:id="@+id/text_display"  
    android:layout_width="140dp"  
    android:layout_height="50dp" 
    android:layout_gravity="center_vertical" 
    android:gravity="center_vertical" 
    android:layout_weight="1"
    android:text="@string/SOS_Number"
    android:textSize="20sp"/>
    
    <ImageView
    android:id="@+id/mainmenu_return_but"
    android:layout_width="20dp"
    android:layout_height="20dp"
    android:background="#00000000"
    android:layout_weight="1"
    android:layout_gravity="center_vertical"
    android:src="@drawable/back_icon" />"
    
    </LinearLayout>
<LinearLayout   
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_gravity="center_horizontal" 
	android:layout_marginTop="5dp"
    android:gravity="center_horizontal"
	android:background="#00000000" >
    
    <Button
    android:id="@+id/set_enable"
    android:layout_width="120dp"
    android:layout_height="40dp"
    android:background="@drawable/btn_red2"
    android:text="@string/Set" 
    android:textColor="#FFFFFF" />
    
    <Button
        android:id="@+id/get_disable"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/buttonform2"
        android:text="@string/Get" 
        android:textColor="#162982" />
    
</LinearLayout>

<ImageView 
    android:layout_width="fill_parent"  
    android:layout_height="10dp"
    android:layout_marginTop="10dp"
    android:background="@drawable/top_header_line"/>
	
<TextView 
    android:layout_width="fill_parent"  
    android:layout_height="wrap_content" 
    android:layout_gravity="center_horizontal" 
    android:gravity="center_horizontal"
    android:layout_marginTop="0dp"
    android:textSize="15dp"
    android:text="@string/Setup_Energency_Call_SOS_Number"/>

<LinearLayout   
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_margin="3dp"
	android:background="#00000000" >
    
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="3dp"
    android:background="@drawable/layoutform3"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/PHONE1" />
	
	<EditText  
    android:id="@+id/sosnumber1_edit"  
    android:layout_width="130dp"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:singleLine="true"  
   	android:maxLength="15"
   	android:layout_weight="1"
   	android:hint="@string/Insert_phone_number"
   	android:textSize="14sp"
    /> 
	
	<Button
    android:id="@+id/sos_number1_set"
    android:layout_width="130dp"
    android:layout_height="30dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_red" 
    android:text="@string/Set"
    android:textColor="#FFFFFF" />
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="3dp"
    android:background="@drawable/layoutform3"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
	
	<TextView 
    android:layout_width="wrap_content"  
    android:layout_height="wrap_content" 
    android:layout_weight="1"
    android:text="@string/PHONE2"/>
	
	<EditText  
    android:id="@+id/sosnumber2_edit"  
    android:layout_width="130dp"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:singleLine="true"  
   	android:maxLength="15"
   	android:layout_weight="1"
   	android:hint="@string/Insert_phone_number"
   	android:textSize="14sp"
    /> 
	
	<Button
    android:id="@+id/sos_number2_set"
    android:layout_width="130dp"
    android:layout_height="30dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_red" 
    android:text="@string/Set"
    android:textColor="#FFFFFF" />
</LinearLayout>

</LinearLayout>

<LinearLayout   
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_margin="3dp"
	android:background="#00000000" >
    
<LinearLayout   
	android:layout_width="wrap_content"  
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal" 
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="3dp"
	android:background="@drawable/layoutform3" >

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/PHONE3" />
	
	<EditText  
    android:id="@+id/sosnumber3_edit"  
    android:layout_width="130dp"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:singleLine="true"  
   	android:maxLength="15"
   	android:layout_weight="1"
   	android:textSize="14sp"
   	android:hint="@string/Insert_phone_number"
    /> 
	
	<Button
    android:id="@+id/sos_number3_set"
    android:layout_width="130dp"
    android:layout_height="30dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_red" 
    android:text="@string/Set"
    android:textColor="#FFFFFF" />
</LinearLayout>

<LinearLayout   
	android:layout_width="wrap_content"  
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal" 
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="3dp"
	android:background="@drawable/layoutform3" > 
	
	<TextView 
    android:layout_width="wrap_content"  
    android:layout_height="wrap_content" 
    android:layout_weight="1"
    android:text="@string/PHONE4"/>
	
	<EditText  
    android:id="@+id/sosnumber4_edit"  
    android:layout_width="130dp"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:singleLine="true"  
   	android:maxLength="15"
   	android:layout_weight="1"
   	android:hint="@string/Insert_phone_number"
   	android:textSize="14sp"
    /> 
	
	<Button
    android:id="@+id/sos_number4_set"
    android:layout_width="130dp"
    android:layout_height="30dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_red" 
    android:text="@string/Set"
    android:textColor="#FFFFFF" />
</LinearLayout>

</LinearLayout>
   
<LinearLayout   
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_margin="3dp"
	android:background="#00000000" >
    
<LinearLayout   
	android:layout_width="wrap_content"  
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal" 
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="3dp"
	android:background="@drawable/layoutform3" >

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/PHONE5" />
	
	<EditText  
    android:id="@+id/sosnumber5_edit"  
    android:layout_width="130dp"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:singleLine="true"  
   	android:maxLength="15"
   	android:layout_weight="1"
   	android:hint="@string/Insert_phone_number"
   	android:textSize="14sp"
    /> 
	
	<Button
    android:id="@+id/sos_number5_set"
    android:layout_width="130dp"
    android:layout_height="30dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_red" 
    android:text="@string/Set"
    android:textColor="#FFFFFF" />
</LinearLayout>

<LinearLayout   
	android:layout_width="wrap_content"  
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal" 
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="3dp"
	android:background="@drawable/layoutform3" > 
	
	<TextView 
    android:layout_width="wrap_content"  
    android:layout_height="wrap_content" 
    android:layout_weight="1"
    android:text="@string/PHONE6"/>
	
	<EditText  
    android:id="@+id/sosnumber6_edit"  
    android:layout_width="130dp"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:singleLine="true"  
   	android:maxLength="15"
   	android:layout_weight="1"
   	android:hint="@string/Insert_phone_number"
   	android:textSize="14sp"
    /> 
	
	<Button
    android:id="@+id/sos_number6_set"
    android:layout_width="130dp"
    android:layout_height="30dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_red" 
    android:text="@string/Set"
    android:textColor="#FFFFFF" />
</LinearLayout>

</LinearLayout>

<LinearLayout   
	android:layout_width="fill_parent"  
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:layout_margin="3dp"
	android:background="#00000000" >
    
<LinearLayout   
	android:layout_width="wrap_content"  
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal" 
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="3dp"
	android:background="@drawable/layoutform3" >

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/PHONE7" />
	
	<EditText  
    android:id="@+id/sosnumber7_edit"  
    android:layout_width="130dp"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:singleLine="true"  
   	android:maxLength="15"
   	android:layout_weight="1"
   	android:hint="@string/Insert_phone_number"
   	android:textSize="14sp"
    /> 
	
	<Button
    android:id="@+id/sos_number7_set"
    android:layout_width="130dp"
    android:layout_height="30dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_red" 
    android:text="@string/Set"
    android:textColor="#FFFFFF" />
</LinearLayout>

<LinearLayout   
	android:layout_width="wrap_content"  
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:layout_gravity="center_horizontal" 
    android:gravity="center_horizontal"
    android:layout_weight="1"
    android:layout_margin="3dp"
	android:background="@drawable/layoutform3" > 
	
	<TextView 
    android:layout_width="wrap_content"  
    android:layout_height="wrap_content" 
    android:layout_weight="1"
    android:text="@string/PHONE8"/>
	
	<EditText  
    android:id="@+id/sosnumber8_edit"  
    android:layout_width="130dp"
    android:layout_height="wrap_content"  
    android:background="@drawable/layoutform2"
    android:singleLine="true"  
   	android:maxLength="15"
   	android:layout_weight="1"
   	android:hint="@string/Insert_phone_number"
   	android:textSize="14sp"
    /> 
	
	<Button
    android:id="@+id/sos_number8_set"
    android:layout_width="130dp"
    android:layout_height="30dp"
    android:layout_weight="1"
    android:layout_marginTop="5dp"
    android:background="@drawable/btn_red" 
    android:text="@string/Set"
    android:textColor="#FFFFFF" />
</LinearLayout>

</LinearLayout>

</LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>